welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {

    	avance();
    	if(getCouleurSol()==Color.green){
    		
    		baisseBrosse();
    		leveBrosse();
    		
    		
    		return true;
         	
    		}
    			recule();
    			gauche();
    			avance();
    	
    	}
    		
    		
    
